[package]
name = "streamflow_mock"
version = "0.1.0"
description = "Mock Streamflow program for DAMM fee distribution testing"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "streamflow_mock"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.29.0"

[dev-dependencies]
solana-program-test = "1.17.0"
solana-sdk = "1.17.0"