[package]
name = "damm_honorary_fee"
version = "0.1.0"
description = "DAMM v2 Honorary Quote-Only Fee Position Module"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "damm_honorary_fee"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.2.0", features = ["no-entrypoint"] }

[dev-dependencies]
solana-program-test = "1.17.0"
solana-sdk = "1.17.0"
tokio = { version = "1.0", features = ["macros"] }